--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <div>     <!--creo logo e sfondo  -->
-            
+        <div class="container">     <!--creo logo e sfondo  -->
+            <img id="logo" src="./img/logo.svg" alt="logo">
         </div>
 
         <div>   <!-- titolone e titoletti -->
@@ -25,6 +26,7 @@
     <main>
 
         <section> <!-- testo principale e liste  -->
+            <h2>hey</h2>
 
 
         </section>
