--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         </div>
 
         <div>   <!-- titolone e titoletti -->
+            <h1> Internet deve essere al servizio del "bene pubblico": il <br>manifesto di Tim Berners-Lee </h1>
+            <p>Scritto da <span id="the_booleaner">The Booleaner</span></p>
+            <p id="data">il 10/10/2020</p>
+            <img src="./img/tim-1.jpg" alt="">
+            <img src="./img/tim-2.jpg" alt="">
 
         </div>
 
