terminata la lista del main

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
             <p id="data">il 10/10/2020</p>
             <img src="./img/tim-1.jpg" alt="">
             <img src="./img/tim-2.jpg" alt="">
-
-        </div>
-
-        <div><!-- foto -->
-
+            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
         </div>
 
     </header>
@@ -31,8 +28,13 @@
     <main>
 
         <section> <!-- testo principale e liste  -->
-            <h2>hey</h2>
-
+            <h3 class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, necessitatibus. Praesentium, ut odio. Ducimus accusantium facilis ipsam dolorem aliquid soluta, modi quasi. Non ullam ex at laudantium repellendus doloremque aut! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem harum, pariatur tenetur velit alias voluptates aliquid aut veniam error doloremque et blanditiis, dolorum aliquam dolore, rerum nisi minus. Placeat, sed?</h3>
+            
+            <ul class="text">
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, delectus necessitatibus nostrum voluptas alias, id fuga commodi voluptates laudantium non vitae, ratione aliquid! Dignissimos soluta molestias, sed suscipit temporibus incidunt.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus inventore dignissimos officia rem quod, reprehenderit delectus voluptatum natus quaerat, omnis at laboriosam, deserunt veniam optio officiis nobis veritatis sed velit.</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quas dolor molestiae recusandae quibusdam? Deleniti cupiditate quos, voluptate ut commodi consequatur excepturi, harum esse omnis, sapiente saepe nisi est veniam.</li>
+            </ul>
 
         </section>
 
