--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quas dolor molestiae recusandae quibusdam? Deleniti cupiditate quos, voluptate ut commodi consequatur excepturi, harum esse omnis, sapiente saepe nisi est veniam.</li>
             </ul>
 
+            <table class="text">
+                <thead class="row">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur tempore ratione ipsa et maxime in, magnam maiores corrupti ipsum nesciunt ducimus harum minima earum magni sequi libero molestias sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, aspernatur ad repellendus ipsum nobis consectetur officia unde dolor eveniet pariatur qui iste facere minima quam ipsa quaerat nostrum. Dolorem, ratione.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur tempore ratione ipsa et maxime in, magnam maiores corrupti ipsum nesciunt ducimus harum minima earum magni sequi libero molestias sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, aspernatur ad repellendus ipsum nobis consectetur officia unde dolor eveniet pariatur qui iste facere minima quam ipsa quaerat nostrum. Dolorem, ratione.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur tempore ratione ipsa et maxime in, magnam maiores corrupti ipsum nesciunt ducimus harum minima earum magni sequi libero molestias sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, aspernatur ad repellendus ipsum nobis consectetur officia unde dolor eveniet pariatur qui iste facere minima quam ipsa quaerat nostrum. Dolorem, ratione.</td>
+                    </tr>
+                </tbody>
+
+            </table>
+
         </section>
 
         <table> <!-- tabella -->
