--- a/index.html
+++ b/index.html
@@ -4,81 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Booleaner</title>
+    <title>Booleaner</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">     <!--creo logo e sfondo  -->
-            <img id="logo" src="./img/logo.svg" alt="logo">
-        </div>
-
-        <div>   <!-- titolone e titoletti -->
-            <h1> Internet deve essere al servizio del "bene pubblico": il <br>manifesto di Tim Berners-Lee </h1>
-            <p>Scritto da <span id="the_booleaner">The Booleaner</span></p>
-            <p id="data">il 10/10/2020</p>
-            <img src="./img/tim-1.jpg" alt="">
-            <img src="./img/tim-2.jpg" alt="">
-            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
-            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
-        </div>
-
-    </header>
-
-    <main>
-
-        <section> <!-- testo principale e liste  -->
-            <h3 class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, necessitatibus. Praesentium, ut odio. Ducimus accusantium facilis ipsam dolorem aliquid soluta, modi quasi. Non ullam ex at laudantium repellendus doloremque aut! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem harum, pariatur tenetur velit alias voluptates aliquid aut veniam error doloremque et blanditiis, dolorum aliquam dolore, rerum nisi minus. Placeat, sed?</h3>
-            
-            <ul class="text">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, delectus necessitatibus nostrum voluptas alias, id fuga commodi voluptates laudantium non vitae, ratione aliquid! Dignissimos soluta molestias, sed suscipit temporibus incidunt.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus inventore dignissimos officia rem quod, reprehenderit delectus voluptatum natus quaerat, omnis at laboriosam, deserunt veniam optio officiis nobis veritatis sed velit.</li>
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quas dolor molestiae recusandae quibusdam? Deleniti cupiditate quos, voluptate ut commodi consequatur excepturi, harum esse omnis, sapiente saepe nisi est veniam.</li>
-            </ul>
-
-            <table class="text">
-                <thead class="row">
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur tempore ratione ipsa et maxime in, magnam maiores corrupti ipsum nesciunt ducimus harum minima earum magni sequi libero molestias sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, aspernatur ad repellendus ipsum nobis consectetur officia unde dolor eveniet pariatur qui iste facere minima quam ipsa quaerat nostrum. Dolorem, ratione.</td>
-                    </tr>
-                    <tr>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur tempore ratione ipsa et maxime in, magnam maiores corrupti ipsum nesciunt ducimus harum minima earum magni sequi libero molestias sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, aspernatur ad repellendus ipsum nobis consectetur officia unde dolor eveniet pariatur qui iste facere minima quam ipsa quaerat nostrum. Dolorem, ratione.</td>
-                    </tr>
-                    <tr>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur tempore ratione ipsa et maxime in, magnam maiores corrupti ipsum nesciunt ducimus harum minima earum magni sequi libero molestias sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, aspernatur ad repellendus ipsum nobis consectetur officia unde dolor eveniet pariatur qui iste facere minima quam ipsa quaerat nostrum. Dolorem, ratione.</td>
-                    </tr>
-                </tbody>
-
-            </table>
-
-        </section>
-
-        <table> <!-- tabella -->
-
-
-        </table>
-
-
-    </main>
     
-    <footer> <!-- immagini finali  -->
-
-
-
-
-    </footer>
-
 </body>
 </html>
-<!--  -->
