--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <header> <!-- logo e immagine in background -->
+        <img id="logo" src="./img/logo.svg" alt="logo" >
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+
+    </footer>
     
 </body>
 </html>
+<!--  -->
