completato titolo del main

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <img id="logo" src="./img/logo.svg" alt="logo" >
 
     </header>
+        
 
-    <main>
+    <main> <!-- titoli immagini liste e tabella -->
+        <h1>Internet deve essere al servizio del "bene publlico": il manifesto di Tim Berners-Lee</h1> <!--titolone  -->
+        <p class="grey_row" id="scritto_da">Scritto da <a href="https://www.google.com/"> The Booleaner</a> </p> <!-- sottotitoli -->
+        <p class="grey_row" id="data">il 10/10/2020</p> </p>
 
     </main>
 
