terminato foto e fonti

--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
         
 
     <main> <!-- titoli immagini liste e tabella -->
-        <h1>Internet deve essere al servizio del "bene publlico": il manifesto di Tim Berners-Lee</h1> <!--titolone  -->
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1> <!--titolone  -->
         <p class="grey_row" id="scritto_da">Scritto da <a href="https://www.google.com/"> The Booleaner</a> </p> <!-- sottotitoli -->
         <p class="grey_row" id="data">il 10/10/2020</p> </p>
+
+        <!-- aggiungo immagini di Tim -->
+
+        <img id="Tim_1" src="./img/tim-1.jpg" alt="Tim_1"> 
+        <img src="./img/tim-2.jpg" alt="Tim_2">
+
+        <!-- aggiungo fonte delle immagini -->
+
+        <p class="image_source">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+        <p class="image_source">2nd Photo: Wikimedia, by Paul Clarke</p>
 
     </main>
 
