--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main> <!-- titoli immagini liste e tabella -->
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1> <!--titolone  -->
         <p class="grey_row" id="scritto_da">Scritto da <a href="https://www.google.com/"> The Booleaner</a> </p> <!-- sottotitoli -->
-        <p class="grey_row" id="data">il 10/10/2020</p> </p>
+        <p class="grey_row" id="data">il 10/10/2020</p>
 
         <!-- aggiungo immagini di Tim -->
 
@@ -30,6 +30,74 @@
         <p class="image_source">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
         <p class="image_source">2nd Photo: Wikimedia, by Paul Clarke</p>
 
+        <!-- inizio parte prima della lista -->
+
+        <p class="font_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque molestias doloribus, 
+            ullam vero ipsam magnam inventore minus fuga nulla. Quam labore aspernatur nobis amet ab. Magnam recusandae 
+            mollitia doloremque quibusdam! <span class="yellow_back"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span> Laboriosam fugiat, 
+            vel officia consequatur culpa aspernatur tenetur natus laudantium praesentium voluptas ut ipsa. Dolores itaque
+             nemo placeat nostrum vero, eos nam.</p>
+
+        <!-- inizio lista -->
+
+        <ul>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quasi, possimus exercitationem totam quae obcaecati perferendis, accusantium sequi soluta placeat mollitia. </li>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex sit eligendi voluptatibus inventore reiciendis, a omnis et, dignissimos voluptate architecto velit dolore id assumenda.</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae nam repellat deleniti facere id ad porro commodi dolorem exercitationem, ducimus numquam.</li>
+
+        </ul>
+
+        <!-- inizio tabella -->
+
+        <table>
+
+            <thead>
+                <tr id="ipsum">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th id="lorem">Lorem ipsum dolor</th>
+                </tr>
+
+            </thead>
+
+
+            <tbody>
+
+                <tr class="pari">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas vel q
+                        uidem commodi dolorum animi atque voluptatum. Omnis, praesentium aspernatur
+                         labore minima ea tempore reprehenderit minus in dignissimos molestias hic. Quos.</td>
+                </tr>
+
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas vel q
+                        uidem commodi dolorum animi atque voluptatum. Omnis, praesentium aspernatur
+                         labore minima ea tempore reprehenderit minus in dignissimos molestias hic. Quos.</td>
+                </tr>
+                <tr class="pari">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas vel q
+                        uidem commodi dolorum animi atque voluptatum. Omnis, praesentium aspernatur
+                         labore minima ea tempore reprehenderit minus in dignissimos molestias hic. Quos.</td>
+                </tr>
+
+
+
+
+            </tbody>
+
+
+        </table>
+
+
+
+
+
     </main>
 
     <footer>
@@ -39,4 +107,3 @@
     
 </body>
 </html>
-<!--  -->
