--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                          labore minima ea tempore reprehenderit minus in dignissimos molestias hic. Quos.</td>
                 </tr>
 
+               
+
 
 
 
@@ -94,13 +96,21 @@
 
         </table>
 
-
-
-
+        <p class="font_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non voluptate quos, quam soluta
+            voluptas minima cum excepturi numquam est eos ab recusandae culpa voluptatum sapiente exercitationem
+             fugiat earum deleniti iusto? <span class="yellow_back"> ipsum dolor sit amet, consectetur adipisicing elit.</span> Eligendi, deleniti 
+             autem quas doloribus sit veritatis cupiditate sapiente et nihil, blanditiis eveniet odit quidem? Nam, eius? 
+             Eveniet facilis delectus odit ea.</p>
 
     </main>
 
     <footer>
+
+        <p class="grey_row" id="foot">Potrebbero interessarti</p>
+
+        <p class="lorem_foto" id="lorem_foto1">Lorem ipsum dolor</p>
+        <p class="lorem_foto" id="lorem_foto2">Lorem ipsum dolor</p>
+
 
 
     </footer>
