ex bonus terminato

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
 
     <header> <!-- logo e immagine in background -->
-        <img id="logo" src="./img/logo.svg" alt="logo" >
-
+        <div class="container">
+            <img id="logo" src="./img/logo.svg" alt="logo" >
+        </div>
     </header>
         
 
-    <main> <!-- titoli immagini liste e tabella -->
+    <main class="container"> <!-- titoli immagini liste e tabella -->
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1> <!--titolone  -->
         <p class="grey_row" id="scritto_da">Scritto da <a href="https://www.google.com/"> The Booleaner</a> </p> <!-- sottotitoli -->
         <p class="grey_row" id="data">il 10/10/2020</p>
@@ -104,7 +105,7 @@
 
     </main>
 
-    <footer>
+    <footer class="container">
 
         <p class="grey_row" id="foot">Potrebbero interessarti</p>
 
